--- a/about.html
+++ b/about.html
@@ -6,21 +6,24 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="harrnish">
 
-      <title>About Me | Portfolio Website Template | CODEGRID</title>
+      <title>About Me | Nicolas Guarini</title>
 
       <!-- stylesheet -->
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/style.css">
 
       <!-- bootstrap cdns -->
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <script src="js/bootstrap.min.js"></script>
 
       <!-- google fonts -->
       <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 
+      <!-- terminal effect -->
+      <script src="js/t.min.js"></script>
+
       <!-- for on scroll animations -->
-      <link rel="stylesheet" href="animate.css">
-      <script src="wow.min.js"></script>
+      <link rel="stylesheet" href="css/animate.css">
+      <script src="js/wow.min.js"></script>
 
 </head>
 <body>
@@ -29,40 +32,36 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">nicolas guarini</a>
                   </span>
 
                   <ul id="menu">
-                        <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
-                        <li><a href="contact.html">contact<span>.</span></a></li>
+                        <li><a href="index.html">home<span>/</span></a></li>
+                        <li><a href="about.html">about me<span>/</span></a></li>
+                        <li><a href="contact.html">contact<span>/</span></a></li>
                   </ul>
 
                   <div id="toggle">
                         <div class="span">menu</div>
                   </div>
-
             </nav>
 
             <div id="resize">
                   <div class="close-btn">close</div>
 
                   <ul id="menu">
-                        <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
-                        <li><a href="contact.html">contact<span>.</span></a></li>
+                        <li><a href="index.html">home<span>/</span></a></li>
+                        <li><a href="about.html">about me<span>/</span></a></li>
+                        <li><a href="contact.html">contact<span>/</span></a></li>
                   </ul>
             </div>
-
             <!--------------- navbar ends here --------------->
 
 
             <!--------------- hero image starts here --------------->
             <div class="container">
                   <div class="row">
-                        <div class="col-lg-12 about image wow fadeInUp" data-wow-delay="1s"></div>
+                        <div class="col-lg-12 about wow fadeInUp" data-wow-delay="1s"></div>
                   </div>
             </div>
             <!--------------- hero image ends here --------------->
@@ -77,9 +76,9 @@
                               <div class="col-lg-12">
                                     <h3 class="wow fadeInUp" data-wow-delay="1.2s">about me.</h3><br>
 
-                                    <p class="wow fadeInUp">Living with passion is what I strictly adhere to. “Always do what you love” how much ever hackneyed this sounds it holds absolutely true. That's why I travel a lot. Not for the sole reason of “loving” to travel but it helps me to get rid of the world and escape into a different dimension of my own. As I am a travel freak I love freezing the moments I relish. The art of capturing photos is something I am always fascinated by.</p>
+                                    <p class="wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolore vero quos odit fuga ab, recusandae enim vitae eligendi, adipisci ducimus qui alias? Suscipit a officiis, natus quidem eligendi dolorum!</p>
 
-                                    <p class="wow fadeInUp" data-wow-delay="0.2s">I am a continuous learner. Learning for me equates to exploring new ideas and growing as an individual. I just cannot imagine my life devoid of designing. I freely express my creativity and imagination by designing. And to give my passion of designing a platform I have a YouTube channel named, Codegrid.</p>
+                                    <p class="wow fadeInUp" data-wow-delay="0.2s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolore vero quos odit fuga ab, recusandae enim vitae eligendi, adipisci ducimus qui alias? Suscipit a officiis, natus quidem eligendi dolorum!</p>
 
                               </div>
                         </div>
@@ -114,7 +113,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @<a href="" class="no-dec">guaro.dat</a> </h4>
                                           <br><br>
                                     </div>
 
@@ -122,10 +121,10 @@
                                           <p class="wow fadeInUp" data-wow-delay="0s">follow me</p>
 
                                           <ul>
-                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s">fb</li>
-                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s">ig</li>
-                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s">tw</li>
-                                                <li id="yt" class="wow fadeInUp" data-wow-delay="1s">yt</li>
+                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s"> <a href="" class="no-dec">fb</a></li>
+                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s"><a href="" class="no-dec">ig</a></li>
+                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s"><a href="" class="no-dec">tw</a></li>
+                                                <li id="yt" class="wow fadeInUp" data-wow-delay="1s"><a href="" class="no-dec">yt</a></li>
                                           </ul>
 
                                           <br><br>
@@ -133,14 +132,13 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">nikiguarincia@gmail.com</h4>
                                           <br><br>
                                     </div>
                               </div>
                         </div>
                   </div>
             </div>
-
             <!--------------- footer ends here --------------->
 
             <br><br><br><br>
