--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="author" content="harrnish">
+      <meta name="author" content="Nicolas Guarini">
 
       <title>Contact | Portfolio Website Template | CODEGRID</title>
 
