--- a/projects/bluebrand.html
+++ b/projects/bluebrand.html
@@ -4,27 +4,26 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="author" content="harrnish">
+      <meta name="author" content="Nicolas Guarini">
 
-      <title>Project | Portfolio Website Template | CODEGRID</title>
+      <title>bluebrand | Nicolas Guarini</title>
 
       <!-- stylesheet -->
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="../css/style.css">
 
       <!-- bootstrap cdns -->
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="../css/bootstrap.min.css">
+      <script src="js/bootstrap.min.js"></script>
 
       <!-- google fonts -->
       <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 
-      <!-- ionicons cdn -->
-      <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
-
+      <!-- terminal effect -->
+      <script src="../js/t.min.js"></script>
 
       <!-- for on scroll animations -->
-      <link rel="stylesheet" href="css/animate.css">
-      <script src="js/wow.min.js"></script>
+      <link rel="stylesheet" href="../css/animate.css">
+      <script src="../js/wow.min.js"></script>
 
 </head>
 <body>
@@ -33,14 +32,13 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">nicolas guarini</a>
                   </span>
 
                   <ul id="menu">
-                        <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
-                        <li><a href="contact.html">contact<span>.</span></a></li>
+                        <li><a href="index.html">home<span>/</span></a></li>
+                        <li><a href="about.html">about me<span>/</span></a></li>
+                        <li><a href="contact.html">contact<span>/</span></a></li>
                   </ul>
 
                   <div id="toggle">
@@ -53,13 +51,11 @@
                   <div class="close-btn">close</div>
 
                   <ul id="menu">
-                        <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
-                        <li><a href="contact.html">contact<span>.</span></a></li>
+                        <li><a href="index.html">home<span>/</span></a></li>
+                        <li><a href="about.html">about me<span>/</span></a></li>
+                        <li><a href="contact.html">contact<span>/</span></a></li>
                   </ul>
             </div>
-
             <!--------------- navbar ends here --------------->
 
             <div class="whitespace"></div>
@@ -72,7 +68,7 @@
                               <div class="col-lg-12">
                                     <br>
 
-                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Project Name</h1><br><br>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s">www.bluebrand.ml</h1><br><br>
 
                                     <div class="row">
                                           <div class="col-lg-4">
@@ -82,12 +78,12 @@
 
                                           <div class="col-lg-4">
                                                 <p class="wow fadeInUp" data-wow-delay="1.4s">started :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">8 May 2019</h6>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">4 Apr 2019</h6>
                                           </div>
 
                                           <div class="col-lg-4">
                                                 <p class="wow fadeInUp" data-wow-delay="1.6s">completed :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">15 May 2019</h6>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">15 Apr 2019</h6>
                                           </div>
                                     </div>
                                     <br>
@@ -100,6 +96,7 @@
 
 
             <!--------------- project image section starts here --------------->
+            <!--
 
             <div class="project-img">
                   <div class="container">
@@ -114,7 +111,7 @@
                         </div>
                   </div>
             </div>
-
+            -->
             <!--------------- project image section ends here --------------->
 
             <br><br>
@@ -139,7 +136,7 @@
             <div class="whitespace"></div>
 
 
-            <!--------------- footer starts here --------------->
+           <!--------------- footer starts here --------------->
             <div class="footer">
                   <div class="container">
                         <br><br>
@@ -164,7 +161,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @guaro.dat</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @<a href="" class="no-dec">guaro.dat</a> </h4>
                                           <br><br>
                                     </div>
 
@@ -172,10 +169,10 @@
                                           <p class="wow fadeInUp" data-wow-delay="0s">follow me</p>
 
                                           <ul>
-                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s">fb</li>
-                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s">ig</li>
-                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s">tw</li>
-                                                <li id="yt" class="wow fadeInUp" data-wow-delay="1s">yt</li>
+                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s"> <a href="" class="no-dec">fb</a></li>
+                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s"><a href="" class="no-dec">ig</a></li>
+                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s"><a href="" class="no-dec">tw</a></li>
+                                                <li id="yt" class="wow fadeInUp" data-wow-delay="1s"><a href="" class="no-dec">yt</a></li>
                                           </ul>
 
                                           <br><br>
@@ -190,7 +187,6 @@
                         </div>
                   </div>
             </div>
-
             <!--------------- footer ends here --------------->
 
             <br><br><br><br>
