--- a/projects/fantasy-football.html
+++ b/projects/fantasy-football.html
@@ -4,23 +4,26 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="author" content="harrnish">
+      <meta name="author" content="Nicolas Guarini">
 
-      <title>Work | Portfolio Website Template | CODEGRID</title>
+      <title>fantasy_football.py | Nicolas Guarini</title>
 
       <!-- stylesheet -->
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="../css/style.css">
 
       <!-- bootstrap cdns -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
-      <script src="js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="../css/bootstrap.min.css">
+      <script src="../js/bootstrap.min.js"></script>
 
       <!-- google fonts -->
       <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 
+      <!-- terminal effect -->
+      <script src="../js/t.min.js"></script>
+
       <!-- for on scroll animations -->
-      <link rel="stylesheet" href="css/animate.css">
-      <script src="js/wow.min.js"></script>
+      <link rel="stylesheet" href="../css/animate.css">
+      <script src="../js/wow.min.js"></script>
 
 </head>
 <body>
@@ -29,14 +32,13 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="https://nicolasguarini.ml/">nicolas guarini</a>
                   </span>
 
                   <ul id="menu">
-                        <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
-                        <li><a href="contact.html">contact<span>.</span></a></li>
+                        <li><a href="https://nicolasguarini.ml/">home<span>/</span></a></li>
+                        <li><a href="../about.html">about me<span>/</span></a></li>
+                        <li><a href="../contact.html">contact<span>/</span></a></li>
                   </ul>
 
                   <div id="toggle">
@@ -49,13 +51,11 @@
                   <div class="close-btn">close</div>
 
                   <ul id="menu">
-                        <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
-                        <li><a href="contact.html">contact<span>.</span></a></li>
+                        <li><a href="../index.html">home<span>/</span></a></li>
+                        <li><a href="../about.html">about me<span>/</span></a></li>
+                        <li><a href="../contact.html">contact<span>/</span></a></li>
                   </ul>
             </div>
-
             <!--------------- navbar ends here --------------->
 
             <div class="whitespace"></div>
@@ -64,66 +64,59 @@
             <div class="container">
                   <div class="hero-content">
                         <br><br>
-
                         <div class="row">
-                              <div class="col-lg-8">
+                              <div class="col-lg-12">
+                                    <br>
 
-                                    <h3 class="wow fadeInUp" data-wow-delay="1s">work.</h3><br>
-                                    <p class="wow fadeInUp" data-wow-delay="1.2s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, accusantium sint quod voluptatem dolorum, quaerat, ut iusto cumque magni ab repudiandae, quasi minus unde temporibus nulla eum eaque! Placeat praesentium sunt suscipit laboriosam deserunt commodi atque corporis, iure maiores dicta, fugit similique.</p>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s">fantasy_football.py</h1><br><br>
 
+                                    <div class="row">
+                                          <div class="col-lg-4">
+                                                <p class="wow fadeInUp" data-wow-delay="1.2s">service :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">Desktop Development (Python)</h6>
+                                          </div>
+
+                                          <div class="col-lg-4">
+                                                <p class="wow fadeInUp" data-wow-delay="1.4s">started :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">28 Jan 2019</h6>
+                                          </div>
+
+                                          <div class="col-lg-4">
+                                                <p class="wow fadeInUp" data-wow-delay="1.6s">completed :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">8 Feb 2019</h6>
+                                          </div>
+                                    </div>
+                                    <br>
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                              </div>
+                        </div>
+                  </div>
+            </div>
+            <!--------------- hero section ends here --------------->
+
+            <br><br>
+
+            <!--------------- project nav starts here --------------->
+
+            <div class="project-nav">
+                  <div class="container">
+                        <div class="row">
+                              <div class="col-lg-6 prev">
+                                    <p><ion-icon name="arrow-back"></ion-icon>previous</p>
+                              </div>
+                              <div class="col-lg-6 next">
+                                    <p>next<ion-icon name="arrow-forward"></ion-icon></p>
                               </div>
                         </div>
                   </div>
             </div>
 
-            <!--------------- hero section ends here --------------->
+            <!--------------- project nav starts here --------------->
 
-            <!--------------- projects section starts here --------------->
-            <div class="container-fluid">
+            <div class="whitespace"></div>
 
-                  <div class="whitespace"></div>
-                  <div class="whitespace"></div>
 
-                  <div class="row">
-                        <div class="col-lg-8"></div>
-
-                        <div class="col-lg-4 project project1 wow fadeInUp" data-wow-delay="1.4s" onclick="location.href='project.html'"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-6 project project2 wow fadeInUp" onclick="location.href='project.html'"></div>
-
-                        <div class="col-lg-6"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-7"></div>
-
-                        <div class="col-lg-4 project project3 wow fadeInUp" onclick="location.href='project.html'"></div>
-
-                        <div class="col-lg-1"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-1"></div>
-
-                        <div class="col-lg-5 project project4 wow fadeInUp" onclick="location.href='project.html'"></div>
-
-                        <div class="col-lg-6"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-            </div>
-
-            <!--------------- projects section ends here --------------->
-
-            <!--------------- footer starts here --------------->
+           <!--------------- footer starts here --------------->
             <div class="footer">
                   <div class="container">
                         <br><br>
@@ -148,7 +141,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @<a href="" class="no-dec">guaro.dat</a> </h4>
                                           <br><br>
                                     </div>
 
@@ -156,10 +149,10 @@
                                           <p class="wow fadeInUp" data-wow-delay="0s">follow me</p>
 
                                           <ul>
-                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s">fb</li>
-                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s">ig</li>
-                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s">tw</li>
-                                                <li id="yt" class="wow fadeInUp" data-wow-delay="1s">yt</li>
+                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s"> <a href="" class="no-dec">fb</a></li>
+                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s"><a href="" class="no-dec">ig</a></li>
+                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s"><a href="" class="no-dec">tw</a></li>
+                                                <li id="yt" class="wow fadeInUp" data-wow-delay="1s"><a href="" class="no-dec">yt</a></li>
                                           </ul>
 
                                           <br><br>
@@ -167,14 +160,13 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">nikiguarincia@gmail.com</h4>
                                           <br><br>
                                     </div>
                               </div>
                         </div>
                   </div>
             </div>
-
             <!--------------- footer ends here --------------->
 
             <br><br><br><br>
@@ -221,6 +213,8 @@
       }, 0.1);
 
       // nav animation ends
+
+
 
       new WOW().init();
 
