--- a/projects/shopping-tracker.html
+++ b/projects/shopping-tracker.html
@@ -6,24 +6,24 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="Nicolas Guarini">
 
-      <title>Nicolas Guarini | Portfolio</title>
+      <title>shoppingTracker.js | Nicolas Guarini</title>
 
       <!-- stylesheet -->
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="../css/style.css">
 
       <!-- bootstrap cdns -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
-      <script src="js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="../css/bootstrap.min.css">
+      <script src="../js/bootstrap.min.js"></script>
 
       <!-- google fonts -->
       <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 
       <!-- terminal effect -->
-      <script src="js/t.min.js"></script>
+      <script src="../js/t.min.js"></script>
 
       <!-- for on scroll animations -->
-      <link rel="stylesheet" href="css/animate.css">
-      <script src="js/wow.min.js"></script>
+      <link rel="stylesheet" href="../css/animate.css">
+      <script src="../js/wow.min.js"></script>
 
 </head>
 <body>
@@ -32,13 +32,13 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">nicolas guarini</a>
+                        <a href="https://nicolasguarini.ml/">nicolas guarini</a>
                   </span>
 
                   <ul id="menu">
-                        <li><a href="index.html">home<span>/</span></a></li>
-                        <li><a href="about.html">about me<span>/</span></a></li>
-                        <li><a href="contact.html">contact<span>/</span></a></li>
+                        <li><a href="https://nicolasguarini.ml/">home<span>/</span></a></li>
+                        <li><a href="../about.html">about me<span>/</span></a></li>
+                        <li><a href="../contact.html">contact<span>/</span></a></li>
                   </ul>
 
                   <div id="toggle">
@@ -51,108 +51,72 @@
                   <div class="close-btn">close</div>
 
                   <ul id="menu">
-                        <li><a href="index.html">home<span>/</span></a></li>
-                        <li><a href="about.html">about me<span>/</span></a></li>
-                        <li><a href="contact.html">contact<span>/</span></a></li>
+                        <li><a href="../index.html">home<span>/</span></a></li>
+                        <li><a href="../about.html">about me<span>/</span></a></li>
+                        <li><a href="../contact.html">contact<span>/</span></a></li>
                   </ul>
             </div>
             <!--------------- navbar ends here --------------->
 
-
+            <div class="whitespace"></div>
 
             <!--------------- hero section starts here --------------->
-            <div class="hero">
-                  <div class="header">
-                        <h1 class="line anim-typewriter">Web and desktop developer.</h1>
-                  </div>  
-            </div>
+            <div class="container">
+                  <div class="hero-content">
+                        <br><br>
+                        <div class="row">
+                              <div class="col-lg-12">
+                                    <br>
 
-            <div class="scroll-down"></div>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s">shoppingTracker.js</h1><br><br>
+
+                                    <div class="row">
+                                          <div class="col-lg-4">
+                                                <p class="wow fadeInUp" data-wow-delay="1.2s">service :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">Web Development (JavaScript)</h6>
+                                          </div>
+
+                                          <div class="col-lg-4">
+                                                <p class="wow fadeInUp" data-wow-delay="1.4s">started :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">31 May 2019</h6>
+                                          </div>
+
+                                          <div class="col-lg-4">
+                                                <p class="wow fadeInUp" data-wow-delay="1.6s">completed :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">not completed yet</h6>
+                                          </div>
+                                    </div>
+                                    <br>
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                              </div>
+                        </div>
+                  </div>
+            </div>
             <!--------------- hero section ends here --------------->
 
+            <br><br>
 
+            <!--------------- project nav starts here --------------->
 
-            <!--------------- projects section starts here --------------->
-            <div class="container-fluid">
-                  <br><br><br>
-
-                  <h6>My projects:</h6>
-
-                  <div class="vertical"></div>
-                  <br>
-
-                  <div class="whitespace"></div>
-                  <div class="whitespace"></div>
-                  
-                  <div class="project-list" onclick="location.href='projects/bluebrand.html'">
-                        <h4 class="project-list-item wow fadeInUp">www.bluebrand.ml</h4>
-                        <br>
-                        <h6 class="project-list-item-description wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolore vero quos odit fuga ab, recusandae enim vitae eligendi, adipisci ducimus qui alias? Suscipit a officiis, natus quidem eligendi dolorum!</h6>
+            <div class="project-nav">
+                  <div class="container">
+                        <div class="row">
+                              <div class="col-lg-6 prev">
+                                    <p><ion-icon name="arrow-back"></ion-icon>previous</p>
+                              </div>
+                              <div class="col-lg-6 next">
+                                    <p>next<ion-icon name="arrow-forward"></ion-icon></p>
+                              </div>
+                        </div>
                   </div>
-
-                  <br><br><br>
-
-                  <div class="project-list" onclick="location.href='projects/fantasy-football.html'">
-                        <h4 class="project-list-item wow fadeInUp">fantasy_football.py</h4>
-                        <br>
-                        <h6 class="project-list-item-description wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolore vero quos odit fuga ab, recusandae enim vitae eligendi, adipisci ducimus qui alias? Suscipit a officiis, natus quidem eligendi dolorum!</h6>
-                  </div>
-
-                  <br><br><br>
-
-                  <div class="project-list" onclick="location.href='projects/shopping-tracker.html'">
-                        <h4 class="project-list-item wow fadeInUp">shoppingTracker.js</h4>
-                        <br>
-                        <h6 class="project-list-item-description wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolore vero quos odit fuga ab, recusandae enim vitae eligendi, adipisci ducimus qui alias? Suscipit a officiis, natus quidem eligendi dolorum!</h6>
-                  </div>
-                  
-                  <br><br><br>
-
-                  <h6 class="project-list-item-description wow fadeInUp" style="color: white; font-weight: bold;">Visit my <a href="" class="no-dec">GitHub</a> for a complete list</h6>
-                  <br><br>
-
-                  <!-- 
-                  <div class="row">
-                        <div class="col-lg-8"></div>
-
-                        <div class="col-lg-4 project project1 wow fadeInUp" onclick="location.href='project.html'"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-6 project project2 wow fadeInUp" onclick="location.href='project.html'"></div>
-
-                        <div class="col-lg-6"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-7"></div>
-
-                        <div class="col-lg-4 project project3 wow fadeInUp" onclick="location.href='project.html'"></div>
-
-                        <div class="col-lg-1"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-1"></div>
-
-                        <div class="col-lg-5 project project4 wow fadeInUp" onclick="location.href='project.html'"></div>
-
-                        <div class="col-lg-6"></div>
-                  </div>
-            -->
-                  <div class="whitespace"></div>
             </div>
-            <!--------------- projects section ends here --------------->
+
+            <!--------------- project nav starts here --------------->
+
+            <div class="whitespace"></div>
 
 
-
-            <!--------------- footer starts here --------------->
+           <!--------------- footer starts here --------------->
             <div class="footer">
                   <div class="container">
                         <br><br>
@@ -216,7 +180,6 @@
       <script type="text/javascript">
 
       // navigation starts here
-
       $("#toggle").click(function() {
             $(this).toggleClass('on');
             $("#resize").toggleClass("active");
@@ -251,7 +214,10 @@
 
       // nav animation ends
 
+
+
       new WOW().init();
+
 
       </script>
 </body>
